--- a/pages/productos.html
+++ b/pages/productos.html
@@ -72,7 +72,7 @@
         <h1 class="display-1 text-center my-5">Galeria de Productos</h1>
         <hr />
         <article class="my-4 row">
-          <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="col-sm-12 col-md-4 col-lg-3 d-none d-sm-none d-md-block">
             <div class="card">
               <img
                 src="../IMG/productos/Croissant_00018_portfolio1.jpg"
