--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
         <hr>
         <article class="row">
           <div class="col-sm-12 col-md-6">
-            <form>
+            <form class="container my-4">
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Nombre</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" maxlength="50" required>
